--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,3 +1,3 @@
 TEAM_ID=
-BUNDLE_ID=com.material2lic.zeustheolympiandefender
+BUNDLE_ID=com.AngryMouse.ZeuseDefender
 APP_NAME=Zeus: The Olympian Defender
